apps/chains-student/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chains-student
spec:
  selector:
    app: chains-student
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
