apps/chains-student/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chains-student
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [chains-student.durczok.ovh]
      secretName: chains-student-tls
  rules:
    - host: chains-student.durczok.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chains-student
                port:
                  number: 80
